--- a/src/App.css
+++ b/src/App.css
@@ -43,8 +43,8 @@
 .jumbotron {
   padding:70px 30px 70px 30px;
   margin:0px auto;
-  background: #9575CD ;
-  color:floralwhite;
+  background: lightgrey ;
+  color:black;
 }
 .h5{
   font-size:80%;
